--- a/Frontend/src/components/Dashboard/Dashboard.css
+++ b/Frontend/src/components/Dashboard/Dashboard.css
@@ -1,38 +1,38 @@
-.dashboard {
-  display: flex;
-}
-
-.dashboard-menu {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  width: 200px;
-  height: 50rem; 
-  background-color: #fbd33c;
-  border-right: 1px solid #ddd;
-}
-
-.dashboard-menu li {
-  margin: 0;
-  padding: 10px;
-}
-
-.dashboard-menu a {
-  text-decoration: none;
-  color: #333;
-  display: flex;
-  align-items: center;
-}
-
-.dashboard-menu a:hover {
-  background-color: #ddd;
-}
-
-.dashboard-menu a svg {
-  margin-right: 8px;
-}
-
-.content {
-  flex: 1;
-  padding: 20px;
-}
+.dashboard-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); 
+    grid-template-rows: auto; 
+    gap: 20px; 
+    padding: 20px;
+  }
+  
+  .grid-item-left, .grid-item-right, .grid-item-down-left, .grid-item-down-right, .grid-item-down-left-2 {
+    background-color: #f9f9f9;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  .grid-item-left {
+    grid-column: 1; 
+  }
+  
+  .grid-item-right {
+    grid-column: 2; 
+  }
+  
+  .grid-item-down-left {
+    grid-column: 1; 
+    grid-row: 2;
+  }
+  
+  .grid-item-down-right {
+    grid-column: 2;
+    grid-row: 2;
+  }
+  
+  .grid-item-down-left-2 {
+    grid-column: 1 / span 2; 
+    grid-row: 3; 
+  }
+  
