--- a/Frontend/src/components/navbar/Navbar.css
+++ b/Frontend/src/components/navbar/Navbar.css
@@ -3,46 +3,29 @@
   align-items: center;
   justify-content: space-between;
   background-color: #050404; 
-  padding: 0px 20px; 
   color: white; 
-  position: relative;
-}
-
-
-.Image-data {
-  display: flex;
-  align-items: center;
+  padding: 0.3rem 1rem;
 }
 
 .Galo-Image {
-  height: 40px; 
-  width: auto; 
+  width: 4rem; 
+  height: inherit;
+  object-fit: cover;
   border-radius: 5px; 
+  vertical-align: bottom;
 }
 
 
 .heading {
-  flex: 1;
   text-align: center;
-  margin: 0;
+  margin: 0px;
 }
 
-
-.profile-menu {
-  position: relative;
+.profile-menu{
+  background-color: #000;
 }
 
-.profile-button {
-  background: none; 
-  border: none; 
-  color: white; 
-  font-size: 20px; 
-  cursor: pointer; 
-  padding: 5px;
-}
-
-
-.dropdown-menu {
+/* .dropdown-menu {
   position: absolute;
   top: 100%; 
   right: 0; 
@@ -51,8 +34,9 @@
   border: 1px solid #ddd; 
   border-radius: 5px; 
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); 
-  padding: 10px; 
-  z-index: 1000; 
+  padding: 20px; 
+  z-index: 1000;
+  width: 200px;
 }
 
 
@@ -68,7 +52,7 @@
 .dropdown-menu a:hover,
 .dropdown-menu .logout-button:hover {
   background-color: #f0f0f0; 
-}
+} */
 
 
 .logout-button {
