--- a/Frontend/src/components/Dashboard/Dashboard.css
+++ b/Frontend/src/components/Dashboard/Dashboard.css
@@ -1,53 +1,10 @@
-.dashboard-container {
+.main-container {
   display: flex;
-  flex-direction: column;
-  gap: 20px;
-  padding: 20px;
-  background-color: #f5f5f5; /* Light background color */
-}
-
-.overview-section {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: space-between;
-}
-
-.production-overview,
-.historical-production,
-.plant-status,
-.peak-hour-rankings {
-  flex: 1 1 45%; /* Allows two components to be side by side */
-  background-color: #fff; /* White background for cards */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Light shadow for depth */
-  border-radius: 8px; /* Rounded corners */
-  overflow: hidden;
-}
-
-.production-overview,
-.historical-content {
-  max-height: 350px;
-  max-width: 1050px;
-}
-
-.status-content,
-.rankings-content {
-  padding: 15px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-@media (max-width: 768px) {
-  .overview-section {
-    flex-direction: column;
-    gap: 15px;
-  }
-
-  .production-overview,
-  .historical-production,
-  .plant-status,
-  .peak-hour-rankings {
-    flex: 1 1 100%; /* Stack components on smaller screens */
-  }
+  grid-template-columns: 1fr; 
+  gap: 25px; 
+  padding: 10px;
+  margin: 15rem;
+  text-align: center;
+  margin-top: -37rem;
+  width: 100%;
 }
