--- a/Frontend/src/components/Sidebar/Sidebar.css
+++ b/Frontend/src/components/Sidebar/Sidebar.css
@@ -1,9 +1,13 @@
 .sidebar {
-  width: 220px;         
+  width: 180px;         
   height: 100vh;         
   background-color: #fbd33c;
-  padding-top: 10px;      
-  position: fixed;       
+  padding-top: 70px;
+  position: sticky;
+  top: 0;
+  left: 0;  
+  z-index: 2;
+  overflow: hidden;
 }
 .sidebar ul {
   list-style-type: none; 
