--- a/Frontend/src/components/productionOverview/ProductionOverview.css
+++ b/Frontend/src/components/productionOverview/ProductionOverview.css
@@ -1,59 +1,85 @@
 .production-container {
-  width: 500px;
-  background: #f5f4f3;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
-  grid-gap: 5px;
-  border-radius: 10px;
-  margin-left: 5px;
-  height: 20rem;
-  border: 5px solid #f5f4f3;
-  text-align: start;
-  box-shadow: 10px  black;
-}
-
-.left-card {
+  background: #fff;
   border-radius: 8px;
+  padding-top: 10px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  font-family: Arial, sans-serif;
+  width: 500px;
+  text-align: start;
 }
 
-h4{
-  margin-left: 15px;
+h4 {
+  margin-bottom: 8px;
+  color: #333;
 }
 
-.data{
-  width: 100%;
-  background: #f1f1f1;
+.last-updated {
+  font-size: 12px;
+  color: #666;
+  float: right;
 }
 
+.circle-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
+  position: relative;
+}
+
+.circle {
+  font-size: 120px;
+  color: #007bff;
+  margin-right: 10rem;
+}
+
+.percentage {
+  position: absolute;
+  font-size: 22px;
+  font-weight: bold;
+  color: #333;
+}
+
+.production-details {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.production-data {
+  color: #333;
+  font-size: 14px;
+}
+
+.production-label, .production-sub-label {
+  display: block;
+}
+
+.production-value, .production-sub-value {
+  font-weight: bold;
+}
+
+.totalItem {
+  display: flex;
+  width: 95%;
+  padding: 10px 0;
+  justify-content: space-between;
+  border-top: 1px solid #eee;
+  background-color: rgba(149, 151, 151, 0.774);
+  border-radius: 10px;
+}
 
 .production-item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: rgb(236, 240, 240);
-  
+  text-align: center;
+  flex: 1;
 }
 
 .label {
-  font-weight:lighter;
-  color: #333;
-  margin-bottom: 5px;
-  line-height: 1.25rem;
-
-
- 
+  display: block;
+  color: #666;
+  font-size: 12px;
 }
 
 .value {
-  text-align: center;
+  font-weight: bold;
   font-size: 14px;
-  color: #000;
-}
-
-.totalItem{
-  display: flex;
-  width: 90%;
-  margin: auto;
-  margin-bottom: 1rem;
 }
